Name:                multihome-daemon
Version:             0.1
Synopsis:            Routing daemon for multihomed servers
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Alexander Morozov
Maintainer:          butler@meltdown.ru
-- Copyright:           
Category:            Network
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  tests/TestAll.hs

Cabal-version:       >=1.8

Executable multihome-daemon
  Main-is: PingServer.hs
  
  -- Packages needed in order to build this package.
  -- Build-depends:       
  Build-Depends:  base, hexdump, bytestring, binary, binary-strict, network,
                  time, dequeue, containers, mtl, transformers, stm
  Other-modules:  Timer, SockOpt
  Build-tools:    c2hs 
  
Test-Suite tests
  Type:              exitcode-stdio-1.0
  Main-is:           tests/TestAll.hs
  Build-Depends:  base, HUnit

